main.c.error
main.c:6:1: warning: typedef requires a name [-Wmissing-declarations]
    6 | typedef unsigned long  long   ;
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
main.c:1531:29: warning: declaration of 'struct repeating_timer' will not be visible outside of this function [-Wvisibility]
 1531 | _Bool timer_callback(struct repeating_timer* t);
      |                             ^
main.c:1542:45: warning: declaration of 'struct repeating_timer' will not be visible outside of this function [-Wvisibility]
 1542 | static void repeating_timer_finalize(struct repeating_timer* self);
      |                                             ^
main.c:1925:20: warning: cast to smaller integer type 'unsigned int' from 'void (*)()' [-Wpointer-to-int-cast]
 1925 |     *(--stack_end)=(unsigned int)fun;
      |                    ^~~~~~~~~~~~~~~~~
main.c:1931:14: warning: cast to smaller integer type 'unsigned int' from 'unsigned int *' [-Wpointer-to-int-cast]
 1931 |     task->sp=(unsigned int)stack_end;
      |              ^~~~~~~~~~~~~~~~~~~~~~~
main.c:1997:11: error: unknown register name 'r0' in asm
 1997 |         : "r0", "r4"
      |           ^
main.c:2004:11: error: unknown register name 'r0' in asm
 2004 |         : "r0", "r5"
      |           ^
main.c:2011:11: error: unknown register name 'r0' in asm
 2011 |         : "r0", "r6"
      |           ^
main.c:2018:11: error: unknown register name 'r0' in asm
 2018 |         : "r0", "r7"
      |           ^
main.c:2026:11: error: unknown register name 'r0' in asm
 2026 |         : "r0", "r3", "r8"
      |           ^
main.c:2034:11: error: unknown register name 'r0' in asm
 2034 |         : "r0", "r3", "r9"
      |           ^
main.c:2042:11: error: unknown register name 'r0' in asm
 2042 |         : "r0", "r3", "r10"
      |           ^
main.c:2050:11: error: unknown register name 'r0' in asm
 2050 |         : "r0", "r3", "r11"
      |           ^
main.c:2058:11: error: unknown register name 'r0' in asm
 2058 |         : "r0", "r1"
      |           ^
main.c:2066:10: warning: cast to 'unsigned int *' from smaller integer type 'unsigned int' [-Wint-to-pointer-cast]
 2066 |     PC=*((unsigned int*)SP+6);
      |          ^~~~~~~~~~~~~~~~~
main.c:2072:11: error: unknown register name 'r0' in asm
 2072 |         : "r0", "r3"
      |           ^
main.c:2080:11: error: unknown register name 'r0' in asm
 2080 |         : "r0", "r4", "r11"
      |           ^
main.c:2088:11: error: unknown register name 'r0' in asm
 2088 |         : "r0", "r4", "r10"
      |           ^
main.c:2096:11: error: unknown register name 'r0' in asm
 2096 |         : "r0", "r4", "r9"
      |           ^
main.c:2104:11: error: unknown register name 'r0' in asm
 2104 |         : "r0", "r4", "r8"
      |           ^
main.c:2111:11: error: unknown register name 'r0' in asm
 2111 |         : "r0", "r7"
      |           ^
main.c:2118:11: error: unknown register name 'r0' in asm
 2118 |         : "r0", "r6"
      |           ^
main.c:2125:11: error: unknown register name 'r0' in asm
 2125 |         : "r0", "r5"
      |           ^
main.c:2132:11: error: unknown register name 'r0' in asm
 2132 |         : "r0", "r4"
      |           ^
main.c:2136:29: warning: declaration of 'struct repeating_timer' will not be visible outside of this function [-Wvisibility]
 2136 | _Bool timer_callback(struct repeating_timer* t)
      |                             ^
main.c:2136:7: error: conflicting types for 'timer_callback'
 2136 | _Bool timer_callback(struct repeating_timer* t)
      |       ^
main.c:1531:7: note: previous declaration is here
 1531 | _Bool timer_callback(struct repeating_timer* t);
      |       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
7 warnings and 20 errors generated.
